# dubarr

./: .gitignore  Dockerfile  Makefile  README.md  example_config.py  image_api.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  search_page.py  series_utils.py  util.py
.github/workflows/: publish.yml
dubarr/pages/: drawers.py  search_page.py
dubarr/utils/: __init__.py  series_utils.py  utils.py
src/dubarr/pages/: search_page.py
src/dubarr/utils/: series_utils.py  utils.py
