[project]
name = "Dubarr"
version = "0.0.10"
description = "View dub status of shows in Sonarr."
dependencies = [
    'nicegui~=1.2.2',
    'aiopyarr==22.11.0',
    'ciso8601==2.3.0',
    'fuzzywuzzy==0.18.0',
    'python-Levenshtein==0.20.9',
    'langcodes==3.3.0',
]

[project.optional-dependencies]
dev = [
    'commitizen',
    'pip-tools',
    'pre-commit',
]

[tool.commitizen]
version = "0.0.10"
tag_format = "v$version"
major_version_zero = true
version_files = [
    "pyproject.toml:version",
]
