[project]
name = "Dubarr"
version = "0.0.12"
description = "View dub status of shows in Sonarr."
dependencies = [
    'nicegui==1.2.2',
    'python-socketio==5.9.0',
    'aiopyarr==22.11.0',
    'httpx==0.23.3',
    'ciso8601==2.3.0',
    'fuzzywuzzy==0.18.0',
    'python-Levenshtein==0.20.9',
    'langcodes==3.3.0',
    'language-data==1.1',
    'pywebview==4.0.2',
]

[project.optional-dependencies]
dev = [
    'commitizen',
    'pip-tools',
    'pre-commit',
]

[tool.commitizen]
version = "0.0.12"
tag_format = "v$version"
major_version_zero = true
version_files = [
    "pyproject.toml:version",
]
